Fix horizontal scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,13 +10,13 @@
 
 /** header **/
 .header {
-  width: 100%;
+  width: calc(100% - 40px);
+  padding: 0 20px;
+  margin: 0 0 20px 0;
   height: 75px;
   line-height: 75px;
   background-color: #000;
   color: #fff;
-  margin: 0 0 20px 0;
-  padding: 0 20px;
   font-size: 2em;
   font-weight: bold;
 }
